--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,9 @@ dependencies {
 	implementation 'org.apache.commons:commons-email:1.5'
 	// fileupload
 	implementation 'commons-fileupload:commons-fileupload:1.5'	
-
+	// security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
 	compileOnly 'org.projectlombok:lombok'
